@@ -741,7 +741,7 @@ RecordVal* Manager::MakeEvent(val_list* args, Frame* frame)
 			}
 
 		const auto& got_type = (*args)[i]->GetType();
-		const auto& expected_type = func->GetType()->ArgTypes()->Types()[i - 1];
+		const auto& expected_type = func->GetType()->ParamList()->Types()[i - 1];
 
 		if ( ! same_type(got_type.get(), expected_type.get()) )
 			{
@@ -977,7 +977,7 @@ void Manager::ProcessEvent(const broker::topic& topic, broker::zeek::Event ev)
 		return;
 		}
 
-	const auto& arg_types = handler->GetType(false)->ArgTypes()->Types();
+	const auto& arg_types = handler->GetType(false)->ParamList()->Types();
 
 	if ( arg_types.size() != args.size() )
 		{
