@@ -189,6 +189,8 @@ Deprecated Functionality
 
 - ``FuncType::Args()`` is deprecated, use ``FuncType::Params()``.
 
+- ``FuncType::ArgTypes()`` is deprecated, use ``FuncType::ParamList()``.
+
 Zeek 3.1.0
 ==========
 
